tests/ui/unsafe/initializing-ranged-via-ctor.stderr
error[E0277]: expected a `FnOnce({integer})` closure, found `unsafe fn(u8) -> NonZeroAndOneU8 {NonZeroAndOneU8}`
  --> $DIR/initializing-ranged-via-ctor.rs:9:34
   |
LL |     println!("{:?}", Some(1).map(NonZeroAndOneU8).unwrap());
   |                              --- ^^^^^^^^^^^^^^^ call the function in a closure: `|| unsafe { /* code */ }`
   |                              |
   |                              required by a bound introduced by this call
   |
   = help: the trait `FnOnce({integer})` is not implemented for fn item `unsafe fn(u8) -> NonZeroAndOneU8 {NonZeroAndOneU8}`
   = note: unsafe function cannot be called generically without an unsafe block
note: required by a bound in `Option::<T>::map`
  --> $SRC_DIR/core/src/option.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
